lab1/Test/L1-A-10-4.output
Error Type A at Line 6
Error Type B at Line 25
Error Type A at Line 32
Error Type B at Line 40
Error Type B at Line 54
Error Type B at Line 55
Error Type B at Line 55
