lab1/Test/L1-A-10-4.cmm
struct wvY {
  int Y4AjhL , zn9qy50M = m4n2 = hT2gS5CnGekL || dy9zVE8Dm_NHm 
    && YRA1FtiLBtkIbQz != mHl - ! O4a ( uSebVbdkHxumWkaP 
    = tY > zbIVtcaN5Biv + nD4uHV7jUE1udsSo * - t [ aLWnvXp 
    && R3wNDiZAi <= YE9F4V6gDL / yx4oYLkvOfSeUqn1G5O [ 
    gE4fTnKP_Wf && Ycmm #+ qfNzVV2 / - uTQ [ JqCuxhDkGWPdVlSnos 
    < upfVaDCP6Py * jt [ t4BRP94Vnxp >= iU5VDY + ( isd0y_zmuz56IE6krei 
    != - ( Ia6s3zZcbiKTn = uwnp1jytNHDz75 = yElmYCD3Fy9 
    || gdPqdeNLsEKgVtzji9_n + ( mkjvoAK0jOcKfWTI29sO && 
    ( XRokxNGsZrQ17vN = pJENydBomzXhcPrr && JL04X / hLoBr1fC9x_3QU57A5Af 
    [ QQOniuz5u6csTcFSo / ( WnZzcyCX43neXT3ypr != AebLk 
    ( BXJhXotm5EnO , RanwuEv15KiUmT_8DD ) + kfjHkW9yS85cl9UFb 
    ) / ufAzpUmA5myAT3P ] ) / o7LLUyBYj4db ) ) <= Xe7el 
    . mvE3AhhrAZOD ) ] / 1149328250.2124096672 . ei8IF_N7jb1QY9A 
    ] ] == 1408984317 / n7Om7qj ( ) . eMh3a0CSoUK6De ] 
    ) ;
}CBA8E4JYVBYeR_Rrjp5 [ 1222442828 ] 
;
float ;
int ;
int ;
int M2y4YAO8R ( int dtWtgfDq , int XBsMT7Zazb ) {
  struct {
  }vupy50YYzT ;
  struct s2oh8zguk17tpJePdY pp46VwMYVfMgYpGe <= ;
  struct LSdAG_wSOCtMyNzKsm bFtk_0zD ;
  int f ;
{
    struct tyd_z5ltjWBpRfa0O TOdesy9MXfVo ;
    int caWtizOG9w2SUlZROKN ;
    int Cs ;
:  }}
int DJLsiqvxGN7Ho9EFu , qWMsdthWb9I6lrqf8Mmc 

;
int _IC3ydU ( ) {
}
int ;
int wl ( ) {
>= }
int ;
int ;
int ;
int cq0vO6B ( ) {
  if ( C5K5ZK2YP )   Yy5OCCxqzuVYGoPn ;
else   wH2KFG_s_0iFVlKRRrj ;

  if ( rVuDyVWFxuKa )   IZ_iFnuQuLRdRz ;
else   if ( SEy )   while ( xiZ7JOeq2j5vgFOT )   return 
    XnIMplJEL ;



- }
>= >= 